Add security dependency to the POM.xml file and put username & password to the form based login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.servlet.multipart.max-request-size=10MB
 project.image=images/
 
 #spring.data.rest.base-path=/api
+
+loggig.level.org.springframework.security=DEBUG
+spring.security.user.name=subro
+spring.security.user.password=subro
+spring.security.user.roles=ADMIN
