--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,6 @@ project.image=images/
 #spring.data.rest.base-path=/api
 
 loggig.level.org.springframework.security=DEBUG
-spring.security.user.name=subro
-spring.security.user.password=subro
-spring.security.user.roles=ADMIN
+#spring.security.user.name=subro
+#spring.security.user.password=subro
+#spring.security.user.roles=ADMIN
