--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,7 @@ project.image=images/
 #spring.data.rest.base-path=/api
 
 loggig.level.org.springframework.security=DEBUG
+logging.pattern.console= ${LOGPATTERN-CONSOLE:%green(%d{yyyy-MM-dd HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
 #spring.security.user.name=subro
 #spring.security.user.password=subro
 #spring.security.user.roles=ADMIN
